Add webhook test script to verify auto-deployment

--- a/index.html
+++ b/index.html
@@ -528,5 +528,7 @@
     <!-- Custom JS -->
     <script src="js/main.js"></script>
     <script src="js/animations.js"></script>
+    <!-- Auto-deployment verification script -->
+    <script src="js/webhook-test.js"></script>
 </body>
 </html>
